@@ -66,4 +66,14 @@ class EventStateService implements EventStateInterface
     {
         return isset(self::$states[$state]) ? self::$states[$state][0] : null;
     }
+
+    /**
+     * Devuelve los estados soportados
+     * 
+     * @return array
+     */
+    public static function getStates()
+    {
+        return self::$states;
+    }
 }
